--- a/canvas/index.html
+++ b/canvas/index.html
@@ -4,25 +4,40 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="script.js" rel="stylesheet">
+     <link href="style.css" rel="stylesheet">
      <script href="script.js"></script>
      <title>Drawing Canvas</title>
 </head>
 <body>
      <canvas class="canvas"></canvas>
-     <main>
+     <main class="sidebar">
           <section class="colors">
-               <div class="black"></div>
-               <div class="red"></div>
-               <div class="green"></div>
-               <div class="blue"></div>
-               <div class="yellow"></div>
-               <div class="magenta"></div>
-               <div class="cyan"></div>
+               <div class="color-white"></div>
+               <div class="color-black"></div>
+               <div class="color-red color_active"></div>
+               <div class="color-green"></div>
+               <div class="color-blue"></div>
+               <div class="color-yellow"></div>
+               <div class="color-magenta"></div>
+               <div class="color-cyan"></div>
+               <div class="color-aquamarine"></div>               
+               <div class="color-orange"></div>               
+               <div class="color-chocolate"></div>               
+               <div class="color-olive"></div>               
+               <div class="color-orangered"></div>               
+               <div class="color-violet"></div>               
+               <div class="color-purple"></div>               
+               <div class="color-pink"></div>               
+               <div class="color-coral"></div>               
+               <div class="color-fuchsia"></div>               
+               <div class="color-yellowgreen"></div>               
+               <div class="color-antiquewhite"></div>               
+               <div class="color-gold"></div>               
+               <div class="color-rainbow"></div>               
           </section>
           <section class="inputs">
                <input type="color" class="input_color">
-               <input type="range" class="input_line">
+               <input type="range" class="input_line" min="0" max="100">
           </section>
      </main>
 </body>
