--- a/random_quote_generator/index.html
+++ b/random_quote_generator/index.html
@@ -14,9 +14,13 @@
       body {
         font-family: Arial, sans-serif;
         background-size: cover;
-        /* background-position: center; */
+        background-position: center;
         height: 100vh;
-        width: 50vw;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
       }
       * {
         padding: 0;
@@ -24,16 +28,17 @@
       }
       .quotes {
         margin: 0 auto;
-        width: 80vw;
         display: flex;
         justify-content: center;
-        align-items: center;
+        width: 80vw;
       }
       .main_quote {
         padding: 0 100px;
         font-size: 50px;
         color: ghostwhite;
         text-shadow: 2.5px 2.5px 5px black;
+        display: flex;
+        flex-direction: column;
       }
       .writer {
         margin-top: 20px;
@@ -41,9 +46,23 @@
         color: rgb(209, 233, 235);
         text-align: end;
       }
+      .btn {
+        height: 35px;
+        width: 35px;
+        background-color: transparent;
+        border: 2px solid rgb(255, 255, 255);
+        text-align: center;
+        line-height: 1;
+        border-radius: 50%;
+        font-size: 20px;
+        color: azure;
+        cursor: pointer;
+        margin-top: 75px;
+      }
     </style>
   </head>
   <body>
     <main class="quotes"></main>
+    <button class="btn">&gt;</button>
   </body>
 </html>
