--- a/random_quote_generator/index.html
+++ b/random_quote_generator/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Quotes</title>
-    <script defer src="/script.js"></script>
+    <script defer src="/random_quote_generator/script.js"></script>
 
     <style>
       html {
