--- a/BMI_calculator/index.html
+++ b/BMI_calculator/index.html
@@ -8,24 +8,31 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form action="get" class="inputs">
-      <figure class="inputs__weight">
-        <label for="weight">Weight</label>
-        <input type="number" id="weight" class="weight" required />
-        <select name="weight_type" id="weight">
-          <option value="kg" name="weight">kg</option>
-          <option value="lb" name="weight">lb</option>
-        </select>
-      </figure>
-      <figure class="inputs__height">
-        <label for="Height">Height</label>
-        <input type="number" id="Height" class="height" required />
-        <select name="height_type" id="height">
-          <option value="cm" name="weight">cm</option>
-          <option value="inches" name="weight">inches.feet</option>
-        </select>
-      </figure>
-      <button class="btn" type="submit">calculate</button>
-    </form>
+    <main class="main_section">
+      <form action="get" class="inputs">
+        <h1 class="heading">BIM calculator</h1>
+        <div class="inputs__layout">
+          <label for="weight" class="inputs__text">Weight</label>
+          <input type="number" id="weight" class="weight" required />
+          <select name="weight_type" id="weight" class="inputs__text">
+            <option value="kg" name="weight">kg</option>
+            <option value="lb" name="weight">lb</option>
+          </select>
+          <label for="Height" class="inputs__text">Height</label>
+          <input type="number" id="Height" class="height" required />
+          <select name="height_type" id="height" class="inputs__text">
+            <option value="cm" name="weight">cm</option>
+            <option value="inches" name="weight">inches.feet</option>
+          </select>
+        </div>
+        <button class="btn inputs__text" type="submit">calculate</button>
+      </form>
+      <div class="results">
+        <div class="circle__main">
+          <div class="wave"></div>
+          <div class="wave"></div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
