add countdown timer project

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <a href="BMI_calculator/index.html">BMI Calculator</a>
     <a href="canvas/index.html">Canvas</a>
+    <a href="countdown_timer/index.html">Countdown Timer</a>
     <a href="random_quote_generator/index.html">Quote Generator</a>
     <a href="to-do_list/index.html">To do list</a>
   </body>
