add rock paper scissors game

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="canvas/index.html">Canvas</a>
     <a href="countdown_timer/index.html">Countdown Timer</a>
     <a href="random_quote_generator/index.html">Quote Generator</a>
+    <a href="rock_paper_scissors/index.html">Rock paper Scissors game</a>
     <a href="to-do_list/index.html">To do list</a>
   </body>
 </html>
