add functions to the trivia game

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="random_quote_generator/index.html">Quote Generator</a>
     <a href="rock_paper_scissors/index.html">Rock paper Scissors game</a>
     <a href="to-do_list/index.html">To do list</a>
+    <a href="trivia/index.html">Tech Trivia</a>
   </body>
 </html>
