--- a/trivia/index.html
+++ b/trivia/index.html
@@ -13,55 +13,13 @@
     <section>
       <header>
         <h1 class="heading">Welcome To Tech Trivia</h1>
+        <p class="text">
+          Please check the questions and refresh if something is not right.
+        </p>
         <p class="score">Score: 00/10</p>
       </header>
       <main>
-        <div class="all_questions">
-          <div class="question_1">
-            <p class="question">
-              Which are the three looping constructs provided by shell?
-            </p>
-            <div class="answers">
-              <p class="answer answer_a"><span>1:</span> while</p>
-              <p class="answer answer_b right"><span>2:</span> for</p>
-              <p class="answer answer_c wrong"><span>3:</span> until</p>
-              <p class="answer answer_d"><span>4:</span> foreach</p>
-              <p class="answer answer_e"><span>5:</span> done</p>
-              <p class="answer answer_f"><span>6:</span> each</p>
-            </div>
-          </div>
-          <div class="question_2">
-            <p class="question">
-              What is the login name of the administrator in Linux?
-            </p>
-            <div class="answers">
-              <p class="answer answer_a"><span>1:</span> root</p>
-              <p class="answer answer_b"><span>2:</span> administrator</p>
-              <p class="answer answer_c"><span>3:</span> admin</p>
-              <p class="answer answer_d">
-                <span>4:</span> all of the mentioned
-              </p>
-              <p class="answer answer_e">
-                <span>5:</span> none of the mentioned
-              </p>
-              <p class="answer answer_f"><span>6:</span> null</p>
-            </div>
-          </div>
-          <div class="question_3">
-            <p class="question">
-              Which command can be used to stop the current executing process in
-              the background?
-            </p>
-            <div class="answers">
-              <p class="answer answer_a"><span>1:</span> kill</p>
-              <p class="answer answer_b"><span>2:</span> stop</p>
-              <p class="answer answer_c"><span>3:</span> remove</p>
-              <p class="answer answer_d"><span>4:</span> rm</p>
-              <p class="answer answer_e"><span>5:</span> null</p>
-              <p class="answer answer_f"><span>6:</span> null</p>
-            </div>
-          </div>
-        </div>
+        <div class="all_questions"></div>
       </main>
     </section>
   </body>
