--- a/trivia/index.html
+++ b/trivia/index.html
@@ -16,6 +16,7 @@
         <p class="text">
           Please check the questions and refresh if something is not right.
         </p>
+        <p class="text">Some questions could have multiple right answers.</p>
         <p class="score">Score: 00/10</p>
       </header>
       <main>
