--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="rock_paper_scissors/index.html">Rock paper Scissors game</a>
     <a href="to-do_list/index.html">To do list</a>
     <a href="trivia/index.html">Tech Trivia</a>
+    <a href="weather_app/index.html">Weather</a>
   </body>
 </html>
