--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather</title>
 
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <header>
-      <h1 class="heading">Weather</h1>
-    </header>
+  <body class="center">
     <main class="forecasting">
       <section class="inputs">
         <form action="GET" class="get_weather">
@@ -35,6 +39,11 @@
       </section>
       <section class="weather">
         <h2 class="current_temp">29.8<span> ℃</span></h2>
+        <img
+          src=" https://openweathermap.org/img/wn/10d@4x.png"
+          alt="weather icon"
+          class="weather_icon"
+        />
         <p class="feels_like">Feels like 32.5℃</p>
         <p class="description">Moderate rain</p>
         <div class="max center">
@@ -124,7 +133,7 @@
               d="M288 32c0 17.7 14.3 32 32 32h32c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32 14.3-32 32s14.3 32 32 32H352c53 0 96-43 96-96s-43-96-96-96H320c-17.7 0-32 14.3-32 32zm64 352c0 17.7 14.3 32 32 32h32c53 0 96-43 96-96s-43-96-96-96H32c-17.7 0-32 14.3-32 32s14.3 32 32 32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H384c-17.7 0-32 14.3-32 32zM128 512h32c53 0 96-43 96-96s-43-96-96-96H32c-17.7 0-32 14.3-32 32s14.3 32 32 32H160c17.7 0 32 14.3 32 32s-14.3 32-32 32H128c-17.7 0-32 14.3-32 32s14.3 32 32 32z"
             />
           </svg>
-          <p>wind speed 0.62m/s</p>
+          <p>wind-speed 0.62 m/s</p>
         </div>
       </section>
     </main>
