--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="BMI_calculator/index.html">BMI Calculator</a>
     <a href="canvas/index.html">Canvas</a>
     <a href="countdown_timer/index.html">Countdown Timer</a>
+    <a href="memory_game/index.html">Memory Game</a>
     <a href="random_quote_generator/index.html">Quote Generator</a>
     <a href="rock_paper_scissors/index.html">Rock paper Scissors game</a>
     <a href="to-do_list/index.html">To do list</a>
