add all functions

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -18,19 +18,15 @@
       <h1>matching images</h1>
       <div class="images_pairs">
         <p class="text">image pair:</p>
-        <button class="btn increase">&#129076;</button>
-        <span>4</span>
-        <button class="btn decrease">&#129078;</button>
+        <button class="btn decrease">&#129076;</button>
+        <span>8</span>
+        <button class="btn increase">&#129078;</button>
       </div>
     </header>
-    <main class="image_box">
-      <div class="images img_001">
-        <img src="img/card_back.jpg" alt="backside card" class="img imgBack" />
-        <img src="img/001.jpg" alt="backside card" class="img imgFront" />
-      </div>
-    </main>
+    <main class="image_box"></main>
     <div class="result hidden">
       <p class="win show_result">🎉🎊🎇🎆you win!🎆🎇🎊🎉</p>
+      <button class="refresh winbtn">&#8634;</button>
     </div>
   </body>
 </html>
