add style to homepage

--- a/index.html
+++ b/index.html
@@ -5,16 +5,242 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practice Projects</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="BMI_calculator/index.html">BMI Calculator</a>
-    <a href="canvas/index.html">Canvas</a>
-    <a href="countdown_timer/index.html">Countdown Timer</a>
-    <a href="memory_game/index.html">Memory Game</a>
-    <a href="random_quote_generator/index.html">Quote Generator</a>
-    <a href="rock_paper_scissors/index.html">Rock paper Scissors game</a>
-    <a href="to-do_list/index.html">To do list</a>
-    <a href="trivia/index.html">Tech Trivia</a>
-    <a href="weather_app/index.html">Weather</a>
+    <header>
+      <h1 class="heading_1">all practice projects</h1>
+    </header>
+    <main class="links">
+      <div class="link">
+        <img
+          src="assets/BMI_calculator.webp"
+          alt="BMI Calculator website image preview"
+          class="img_preview"
+        />
+        <h2 class="heading_2">BMI Calculator</h2>
+        <p class="description">
+          Body mass index is a value derived from the mass and height of a
+          person. The BMI is defined as the body mass divided by the square of
+          the body height, and is expressed in units, resulting from mass in
+          kilograms and height in metres.
+        </p>
+        <div class="buttons">
+          <a href="BMI_calculator/" class="preview live" target="_blank"
+            >live preview</a
+          >
+          <a
+            href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/BMI_calculator"
+            class="preview source"
+            target="_blank"
+            >source code</a
+          >
+        </div>
+      </div>
+
+      <div class="link">
+        <img
+          src="assets/canvas.webp"
+          alt="Canvas website image preview"
+          class="img_preview"
+        />
+        <h2 class="heading_2">canvas</h2>
+        <p class="description">
+          A digital drawing canvas you can use to draw upon using any device.
+          The only limitation is your imagination. change color, change brush
+          size, use any custom color you want.
+        </p>
+        <div class="buttons">
+          <a href="canvas/" class="preview live" target="_blank"
+            >live preview</a
+          >
+          <a
+            href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/canvas"
+            class="preview source"
+            target="_blank"
+            >source code</a
+          >
+        </div>
+      </div>
+
+      <div class="link">
+        <img
+          src="assets/countdown-timer.webp"
+          alt="countdown timer website image preview"
+          class="img_preview"
+        />
+        <h2 class="heading_2">countdown timer</h2>
+        <p class="description">
+          Countdown Timer is just the countdown taken out of the usual stopwatch
+          and countdown gadget. It makes it easier to get to the countdown. It
+          allow you to use your keyboard to enter the numbers, and to start or
+          stop the timer or rest it.
+        </p>
+        <div class="buttons">
+          <a href="countdown_timer/" class="preview live" target="_blank"
+            >live preview</a
+          >
+          <a
+            href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/countdown_timer"
+            class="preview source"
+            target="_blank"
+            >source code</a
+          >
+        </div>
+      </div>
+
+      <div class="link">
+        <img
+          src="assets/memory-game.webp"
+          alt="Image Paring website image preview"
+          class="img_preview"
+        />
+        <h2 class="heading_2">Image Paring</h2>
+        <p class="description">
+          Match pictures and find out how good is your memory! Pictures match
+          games. Train your memory, concentration, accuracy, attention, the
+          speed of thinking and logic skills and much more. This game is a great
+          way to exercise your memory and keep your brain fit!
+        </p>
+        <div class="buttons">
+          <a href="memory_game/" class="preview live" target="_blank"
+            >live preview</a
+          >
+          <a
+            href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/memory_game"
+            class="preview source"
+            target="_blank"
+            >source code</a
+          >
+        </div>
+      </div>
+
+      <div class="link">
+        <img
+          src="assets/random-quote.webp"
+          alt="random quote generator website image preview"
+          class="img_preview"
+        />
+        <h2 class="heading_2">random quote</h2>
+        <p class="description">
+          A free online tool that will generate random motivational quotes
+          including uplifting quotes, inspirational quotes, and interesting
+          quotes. With a corresponding image
+        </p>
+        <div class="buttons">
+          <a href="random_quote_generator/" class="preview live" target="_blank"
+            >live preview</a
+          >
+          <a
+            href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/random_quote_generator"
+            class="preview source"
+            target="_blank"
+            >source code</a
+          >
+        </div>
+      </div>
+
+      <div class="link">
+        <img
+          src="assets/rock-paper-scissors.webp"
+          alt="rock paper scissors website image preview"
+          class="img_preview"
+        />
+        <h2 class="heading_2">rock paper scissors</h2>
+        <p class="description">
+          Rock paper scissors is an intransitive hand game, usually played
+          between two people, in which each player simultaneously forms one of
+          three shapes with an outstretched hand. These shapes are "rock",
+          "paper", and "scissors"
+        </p>
+        <div class="buttons">
+          <a href="rock_paper_scissors/" class="preview live" target="_blank"
+            >live preview</a
+          >
+          <a
+            href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/rock_paper_scissors"
+            class="preview source"
+            target="_blank"
+            >source code</a
+          >
+        </div>
+      </div>
+
+      <div class="link">
+        <img
+          src="assets/to-do-list.webp"
+          alt="to do(task manager) website image preview"
+          class="img_preview"
+        />
+        <h2 class="heading_2">to do(task manager)</h2>
+        <p class="description">
+          Make managing tasks easier. Break tasks down into simple steps.To Do
+          gives you focus, from work to play.
+        </p>
+
+        <div class="buttons">
+          <a href="to-do_list/" class="preview live" target="_blank"
+            >live preview</a
+          >
+          <a
+            href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/to-do_list"
+            class="preview source"
+            target="_blank"
+            >source code</a
+          >
+        </div>
+      </div>
+
+      <div class="link">
+        <img
+          src="assets/trivia.webp"
+          alt="trivia website image preview"
+          class="img_preview"
+        />
+        <h2 class="heading_2">tech trivia</h2>
+        <p class="description">
+          Tech Trivia is a quiz game that combines computing history, curious
+          tech facts, web culture, and enthusiast-level PC knowledge.
+        </p>
+
+        <div class="buttons">
+          <a href="trivia/" class="preview live" target="_blank"
+            >live preview</a
+          >
+          <a
+            href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/trivia"
+            class="preview source"
+            target="_blank"
+            >source code</a
+          >
+        </div>
+      </div>
+
+      <div class="link">
+        <img
+          src="assets/weather-app.webp"
+          alt="weather app website image preview"
+          class="img_preview"
+        />
+        <h2 class="heading_2">weather app</h2>
+        <p class="description">
+          This weather app is one of best free weather apps with full features:
+          Local weather
+        </p>
+
+        <div class="buttons">
+          <a href="weather_app/" class="preview live" target="_blank"
+            >live preview</a
+          >
+          <a
+            href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/weather_app"
+            class="preview source"
+            target="_blank"
+            >source code</a
+          >
+        </div>
+      </div>
+    </main>
   </body>
 </html>
