--- a/calculator/index.html
+++ b/calculator/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Basic Calculator</h1>
+    <h1 class="heading">Basic Calculator</h1>
     <main class="calculator">
-      <div class="display"></div>
+      <div class="display">123</div>
       <div class="numbers">0</div>
       <div class="numbers">1</div>
       <div class="numbers">2</div>
@@ -22,15 +22,15 @@
       <div class="numbers">7</div>
       <div class="numbers">8</div>
       <div class="numbers">9</div>
-      <div class="symbols">+</div>
-      <div class="symbols">-</div>
-      <div class="symbols">*</div>
-      <div class="symbols">/</div>
-      <div class="symbols">%</div>
-      <div class="symbols">=</div>
-      <div class="symbols">C</div>
-      <div class="symbols">.</div>
-      <div class="symbols">&Sqrt;</div>
+      <div class="numbers">+</div>
+      <div class="numbers">-</div>
+      <div class="numbers">*</div>
+      <div class="numbers">/</div>
+      <div class="numbers">%</div>
+      <div class="numbers">=</div>
+      <div class="numbers">C</div>
+      <div class="numbers">.</div>
+      <div class="numbers">&Sqrt;</div>
     </main>
   </body>
 </html>
