add final style and html

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -11,26 +11,30 @@
   <body>
     <h1 class="heading">Basic Calculator</h1>
     <main class="calculator">
-      <div class="display">123</div>
-      <div class="numbers">0</div>
-      <div class="numbers">1</div>
-      <div class="numbers">2</div>
-      <div class="numbers">3</div>
-      <div class="numbers">4</div>
-      <div class="numbers">5</div>
-      <div class="numbers">6</div>
+      <div class="display">
+        <div class="input1">12345678901234567890</div>
+        <div class="input2">12345678901234567890<span>+</span></div>
+        <div class="result">12345678901234567890</div>
+      </div>
+      <div class="numbers">C</div>
+      <div class="numbers">%</div>
+      <div class="numbers">&Sqrt;</div>
+      <div class="numbers">/</div>
       <div class="numbers">7</div>
       <div class="numbers">8</div>
       <div class="numbers">9</div>
-      <div class="numbers">+</div>
-      <div class="numbers">-</div>
       <div class="numbers">*</div>
-      <div class="numbers">/</div>
-      <div class="numbers">%</div>
-      <div class="numbers">=</div>
-      <div class="numbers">C</div>
+      <div class="numbers">4</div>
+      <div class="numbers">5</div>
+      <div class="numbers">6</div>
+      <div class="numbers">-</div>
+      <div class="numbers">1</div>
+      <div class="numbers">2</div>
+      <div class="numbers">3</div>
+      <div class="numbers double">+</div>
+      <div class="numbers">0</div>
       <div class="numbers">.</div>
-      <div class="numbers">&Sqrt;</div>
+      <div class="numbers">=</div>
     </main>
   </body>
 </html>
