--- a/calculator/index.html
+++ b/calculator/index.html
@@ -13,9 +13,10 @@
     <h1 class="heading">Basic Calculator</h1>
     <main class="calculator">
       <div class="display">
-        <div class="input1">12345678901234567890</div>
-        <div class="input2">12345678901234567890<span>+</span></div>
-        <div class="result">12345678901234567890</div>
+        <div class="input1">123</div>
+        <span class="operator">√</span>
+        <div class="input2">123</div>
+        <div class="result">123</div>
       </div>
       <div class="numbers">C</div>
       <div class="numbers">%</div>
