--- a/index.html
+++ b/index.html
@@ -41,6 +41,31 @@
 
       <div class="link">
         <img
+          src="assets/calculator.webp"
+          alt="calculator website image preview"
+          class="img_preview"
+        />
+        <h2 class="heading_2">calculator</h2>
+        <p class="description">
+          The most simple mathematical operations: addition, subtraction,
+          multiplication, division. This is a simplified version of the a
+          typical calculator.
+        </p>
+        <div class="buttons">
+          <a href="calculator/" class="preview live" target="_blank"
+            >live preview</a
+          >
+          <a
+            href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/calculator"
+            class="preview source"
+            target="_blank"
+            >source code</a
+          >
+        </div>
+      </div>
+
+      <div class="link">
+        <img
           src="assets/canvas.webp"
           alt="Canvas website image preview"
           class="img_preview"
