--- a/ping_pong/index.html
+++ b/ping_pong/index.html
@@ -10,13 +10,16 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <header class="heading">
+    <header class="head">
       <h1 class="heading">score</h1>
-      <span class="player_score1">0</span>
-      <span class="player_score2">0</span>
+      <span class="scores player_score1">0</span>
+      <div class="divider"></div>
+      <span class="scores player_score2">0</span>
     </header>
-    <div class="ball"></div>
-    <div class="paddle right"></div>
-    <div class="paddle left"></div>
+    <main class="game_elements">
+      <div class="ball"></div>
+      <div class="paddle right"></div>
+      <div class="paddle left"></div>
+    </main>
   </body>
 </html>
