--- a/ping_pong/index.html
+++ b/ping_pong/index.html
@@ -7,7 +7,7 @@
     <title>Ping Pong</title>
 
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <script src="script.js" defer type="module"></script>
   </head>
   <body>
     <header class="head">
