add function: start button

--- a/index.html
+++ b/index.html
@@ -143,6 +143,30 @@
 
       <div class="link">
         <img
+          src="assets/ping-pong.webp"
+          alt="random quote generator website image preview"
+          class="img_preview"
+        />
+        <h2 class="heading_2">ping pong</h2>
+        <p class="description">
+          One of the hardest project i've worked on so far. the game has minimal
+          functions and can be played with mouse.
+        </p>
+        <div class="buttons">
+          <a href="ping_pong/" class="preview live" target="_blank"
+            >live preview</a
+          >
+          <a
+            href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/ping_pong"
+            class="preview source"
+            target="_blank"
+            >source code</a
+          >
+        </div>
+      </div>
+
+      <div class="link">
+        <img
           src="assets/random-quote.webp"
           alt="random quote generator website image preview"
           class="img_preview"
