--- a/index.html
+++ b/index.html
@@ -312,11 +312,14 @@
             any database, once refresh the data will be lost
           </p>
           <div class="buttons">
-            <a href="expense_tracker/" class="preview live" target="_blank"
+            <a
+              href="https://ismayel-expensetracker.netlify.app/"
+              class="preview live"
+              target="_blank"
               >live preview</a
             >
             <a
-              href="https://github.com/IsmayelAlam/practice_html_css_javascript/tree/main/BMI_calculator"
+              href="https://github.com/IsmayelAlam/practice_react/tree/main/expense_tracker"
               class="preview source"
               target="_blank"
               >source code</a
