add new app the the homepage

--- a/index.html
+++ b/index.html
@@ -326,6 +326,34 @@
             >
           </div>
         </div>
+
+        <div class="link">
+          <img
+            src="assets/movie2watch.webp"
+            alt="image preview"
+            class="img_preview"
+          />
+          <h2 class="heading_3">movie2watch</h2>
+          <p class="description">
+            This is a movie searching website to get a basic overview. You can
+            add your favorite movie to bookmark, watch the trailer and many
+            other details all at one place.
+          </p>
+          <div class="buttons">
+            <a
+              href="https://ismayel-movie2watch.netlify.app/"
+              class="preview live"
+              target="_blank"
+              >live preview</a
+            >
+            <a
+              href="https://github.com/IsmayelAlam/practice_react/tree/main/movie2watch"
+              class="preview source"
+              target="_blank"
+              >source code</a
+            >
+          </div>
+        </div>
       </section>
     </main>
   </body>
