--- a/canvasTest/index.html
+++ b/canvasTest/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <script defer src="canvas01.js"></script>
-    <title>Drawing Canvas</title>
+    <title>Canvas</title>
   </head>
   <body>
     <canvas class="canvas"></canvas>
