--- a/canvasTest/index.html
+++ b/canvasTest/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
-    <script defer src="collision02.js"></script>
+    <script defer src="circularMotion.js"></script>
     <title>Canvas</title>
   </head>
   <body>
